2009-06-02  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #11019: User Setup Rewrite #4 - User settings now configurable with $GLOBALS['TYPO3_USER_SETTINGS']

2009-06-02  Benjamin Mack  <benni@typo3.org>

	* Followup to #11148: Remove static require_once() to t3lib and tslib and use autoloading instead - removed more require_once() statements

2009-06-02  Ingo Renner  <ingo@typo3.org>

	* Fixed bug #9818: Enable <del> instead of <strike> in lib.parseFunc_RTE.allowTags by default (credits Susanne Moog)

2009-06-01  Jeff Segars  <jeff@webempoweredchurch.org>

	* Added feature #11167: Add method for saving and closing a record.

2009-06-01  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #10865: Using User-Setting "titleLen" in element browser

2009-05-31  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #11216: getModuleTemplate is prepended with backPath always. Now syntax EXT:extkey/templatefile is supported.

2009-05-31  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #11176: LogicException is thrown if spl_autoload() fails with PHP 5.2.0

2009-05-31  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #11233: Log module has an unwanted margin
	* Fixed bug #11232: User Admin module has an unwanted margin (Thanks to Dan Osipov)
	* Fixed bug #11218: Typo in typo3/init.php

2009-05-30  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #3569: <legend>Search form</legend> is hardcoded (Thanks to Krystian Szymukowicz)

2009-05-29  Jeff Segars  <jeff@webempoweredchurch.org>

	* Fixed bug #11166: loadPrototype() called in frontend editing without a valid doc instance.

2009-05-28  Steffen Kamper  <info@sk-typo3.de>

	* Follow-up to #11207 changed filename to lower case in Hook-array

2009-05-28  Jeff Segars  <jeff@webempoweredchurch.org>

	* Fixed bug #10744: Icon path calculated incorrectly in t3lib_tceforms->getIcon()

2009-05-28  Steffen Kamper  <info@sk-typo3.de>

	* Added feature #11207 Hook in typo3/class.webPageTree.php -> wrapTitle
