@@ -1,5 +1,6 @@
 2009-06-02  Steffen Kamper  <info@sk-typo3.de>
 
+	* Added feature #11241: Feature: Add TYPO3_USER_SETTINGS to configuration module
 	* Fixed bug #11019: User Setup Rewrite #4 - User settings now configurable with $GLOBALS['TYPO3_USER_SETTINGS']
 
 2009-06-02  Benjamin Mack  <benni@typo3.org>
